--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/5.9.0/css/all.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+
     <script src="https://kit.fontawesome.com/2353a4b51c.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
